--- a/src/styles/Footer.module.scss
+++ b/src/styles/Footer.module.scss
@@ -1,4 +1,8 @@
-@import "./variables.scss";
+/*!
+ * Copyright (c) 2022 (original work) Ivan Katkov <vanya6537@gmail.com>;
+ */
+
+@import './variables.scss';
 
 .footer {
     width: 100%;
