--- a/src/styles/Navigation.module.scss
+++ b/src/styles/Navigation.module.scss
@@ -1,3 +1,7 @@
+/*!
+ * Copyright (c) 2022 (original work) Ivan Katkov <vanya6537@gmail.com>;
+ */
+
 .header {
   width: 100%;
   height: 80px;
@@ -7,12 +11,13 @@
   justify-content: space-between;
   /*overflow: hidden;*/
   padding: 20px;
-  background: transparent;
+  //background: transparent;
 
-  font-size: 16px;
+  font-size: 12px;
   font-weight: bold;
   color: white;
   white-space: nowrap;
+  background: rgba(0, 0, 0, 0.5);
 }
 
 .links {
@@ -25,21 +30,61 @@
 
 .dropdown {
   > ul {
-    padding-top: 8px;
+    //padding-top: 8px;
+
+    //padding: 30px 20px 20px 20px;
+    transform: translateX(-20px);
   }
+
   > ul > li {
-    line-height: 24px;
+    background: rgba(0, 0, 0, 0.6);
+    //line-height: 32px;
+    padding: 20px 10px;
+
+    &:first-child {
+      margin-top: 30px;
+    }
   }
 }
 
 .links > li {
-  margin-right: 24px;
+  &:first-child {
+    margin-left: 12px;
+  }
+
+  margin-right: 12px;
   position: relative;
+
 }
 
 .phone {
-  width: 300px;
+  text-align: center;
+  width: 200px;
+  vertical-align: middle;
+  line-height: 40px;
 }
+
+@media (min-width: 400px) {
+  .links > li {
+    &:first-child {
+      margin-left: 24px;
+    }
+
+    margin-right: 24px;
+    position: relative;
+  }
+  .phone {
+    text-align: center;
+    width: 300px;
+    vertical-align: middle;
+    line-height: 40px;
+  }
+
+  .header {
+    font-size: 16px;
+  }
+}
+
 
 .phoneIcon {
 }
