--- a/src/features/home/styles.module.css
+++ b/src/features/home/styles.module.css
@@ -1,3 +1,7 @@
+/*
+ * Copyright (c) 2022 (original work) Ivan Katkov <vanya6537@gmail.com>;
+ */
+
 .page {
     overflow: auto;
     min-height: 100vh;
