--- a/src/features/threejs/styles.module.css
+++ b/src/features/threejs/styles.module.css
@@ -1,3 +1,7 @@
+/*
+ * Copyright (c) 2022 (original work) Ivan Katkov <vanya6537@gmail.com>;
+ */
+
 .scrollArea {
     position: absolute;
     top: 0;
