--- a/src/styles/Button.module.scss
+++ b/src/styles/Button.module.scss
@@ -1,3 +1,7 @@
+/*!
+ * Copyright (c) 2022 (original work) Ivan Katkov <vanya6537@gmail.com>;
+ */
+
 .button {
     font-size: 20px;
     line-height: 1;
