--- a/src/styles/SideSlider.module.scss
+++ b/src/styles/SideSlider.module.scss
@@ -1,32 +1,35 @@
+/*!
+ * Copyright (c) 2022 (original work) Ivan Katkov <vanya6537@gmail.com>;
+ */
 
 .sideWrapper {
-  position: fixed;
-  top: 0;
-  left: 7vw;
-  height: 100vh;
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  z-index: 1;
+    position: fixed;
+    top: 0;
+    left: 2vw;
+    height: 100vh;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    z-index: 1;
 }
 
 .decor {
-  min-height: 40vh;
+    min-height: 40vh;
 
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  align-items: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
 }
 
 .decor > span {
-  background: rgba(255, 255, 255, 0.9);
-  height: 13vh;
-  min-width: 5px;
+    background: rgba(255, 255, 255, 0.9);
+    height: 13vh;
+    min-width: 5px;
 }
 
 .decor > span:nth-child(2) {
-  background: rgba(255, 255, 255, 0.5);
-  height: 13vh;
-  min-width: 5px;
+    background: rgba(255, 255, 255, 0.5);
+    height: 13vh;
+    min-width: 5px;
 }
