--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -1,3 +1,7 @@
+/*!
+ * Copyright (c) 2022 (original work) Ivan Katkov <vanya6537@gmail.com>;
+ */
+
 @import url('https://fonts.googleapis.com/css?family=Sen&display=swap');
 
 html,
@@ -8,6 +12,12 @@ body {
     font-family: 'Sen', -apple-system, BlinkMacSystemFont, Segoe UI, Roboto,
         Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue,
         sans-serif;
+
+    background: #0c0f13;
+    overflow: hidden;
+    //font-family: "Sulphur Point", sans-serif;
+    color: #8b8b8b;
+    //font-size: 0.9rem;
 }
 
 a {
