--- a/src/styles/Navigation.module.scss
+++ b/src/styles/Navigation.module.scss
@@ -74,8 +74,8 @@
     position: relative;
   }
   .phone {
-    text-align: center;
-    width: 300px;
+    text-align: left;
+    width: 200px;
     vertical-align: middle;
     line-height: 40px;
   }
