--- a/src/styles/ScrollArea.module.scss
+++ b/src/styles/ScrollArea.module.scss
@@ -3,12 +3,26 @@
  */
 
 .scrollArea {
-    //z-index: 0;
-    position: absolute;
-    display: block;
+  position: absolute;
+  display: block;
 
-    height: 100%;
-    z-index: 1;
-    overflow: auto;
-    width: 100%;
+  height: 100%;
+  z-index: 1;
+  overflow: auto;
+  width: 100%;
+}
+
+.fadeIn {
+  opacity: 0;
+  transition: ease-in-out 0.4s;
+  animation: fade-in 0.4s ease-in-out forwards;
+}
+
+@keyframes fade-in {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
 }
