--- a/src/styles/HomeScrollable.module.scss
+++ b/src/styles/HomeScrollable.module.scss
@@ -79,6 +79,16 @@
     bottom: 100px;
 }
 
+.noSelect {
+    -webkit-touch-callout: none; /* iOS Safari */
+    -webkit-user-select: none; /* Safari */
+    -khtml-user-select: none; /* Konqueror HTML */
+    -moz-user-select: none; /* Old versions of Firefox */
+    -ms-user-select: none; /* Internet Explorer/Edge */
+    user-select: none; /* Non-prefixed version, currently
+                                  supported by Chrome, Edge, Opera and Firefox */
+}
+
 @media (min-width: 500px) {
     .button {
         position: relative;
