--- a/src/features/home/ui/button/styles.module.css
+++ b/src/features/home/ui/button/styles.module.css
@@ -12,7 +12,6 @@
 }
 
 .button {
-    margin: 10px;
     padding: 15px 45px;
     text-align: center;
     text-transform: uppercase;
@@ -25,7 +24,7 @@
     /*border-radius: 10px;*/
     display: block;
     background: transparent;
-    font-size: 20px;
+    font-size: inherit;
 }
 
 .button:hover {
