--- a/src/styles/Home.module.scss
+++ b/src/styles/Home.module.scss
@@ -2,7 +2,175 @@
  * Copyright (c) 2022 (original work) Ivan Katkov <vanya6537@gmail.com>;
  */
 
+$green: #0f3034;
+
+.dividerWrapper {
+  position: absolute;
+  width: 100vw;
+  height: 300px;
+  top: 0;
+  //transform: translateY(-300px);
+}
+
+.relative {
+  position: relative;
+}
+
 .container {
-    width: 100vw;
-    height: 100vh;
+  width: 100vw;
+  height: 100vh;
+}
+
+$iconSize: 120px;
+
+.block {
+  padding: 40px 0 0 0;
+  width: 80%;
+
+  > h1 {
+    margin: 0;
+    color: white;
+    font-size: 40px;
+    padding: 40px 40px 40px 0;
+    text-align: left;
+    width: 100%;
+  }
+
+  > h3 {
+    opacity: 0.6;
+    font-size: 32px;
+  }
+}
+
+
+.partners {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+
+  //background: linear-gradient(0deg,#002a00 100%, #002a00 50%);
+  //background: rgb(0,117,42);
+  //background: -moz-linear-gradient(185deg, rgba(0,117,42,0.9289916650253851) 0%, rgba(0,69,21,1) 100%);
+  //background: -webkit-linear-gradient(185deg, rgba(0,117,42,0.9289916650253851) 0%, rgba(0,69,21,1) 100%);
+  //background: linear-gradient(185deg, rgba(0,117,42,0.9289916650253851) 0%, rgba(0,69,21,1) 100%);
+  //filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#00752a",endColorstr="#004515",GradientType=1);
+  background: $green;
+  width: 100%;
+
+  > h1 {
+    text-align: center;
+  }
+  > ul {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    padding: 40px;
+
+
+    > li {
+      padding: 0 20px;
+      //pointer-events: none;
+
+      img {
+        width: $iconSize;
+        height: $iconSize;
+      }
+    }
+  }
+
+}
+
+.catalog {
+  height: 100vh;
+  overflow: hidden;
+  width: 100%;
+  background: $green;
+  display: block;
+
+  > h1 {
+    color: white;
+    text-align: center;
+    font-size: 32px;
+    padding: 80px;
+  }
+
+  & > .catalogItems {
+    display: grid;
+    grid-template-columns: repeat(4, 25%);
+    grid-column-gap: 0;
+    height: 100%;
+    width: 100%;
+    cursor: pointer;
+
+    > div {
+      //filter: grayscale(1);
+      //margin: 20px;
+      position: relative;
+      //border-radius: 20px;
+      //margin-right: 20px;
+
+
+      //&:before{
+      //  z-index: -1;
+      //  content: '';
+      //  position: absolute;
+      //  top: 0;
+      //  left: 0;
+      //  right: 0;
+      //  bottom: 0;
+      //
+      //  //box-shadow: inset 0 0 2000px rgba(203, 203, 203, 0.96);
+      //  //filter: blur(1px);
+      //  background: inherit;
+      //
+      //  //padding: 20px;
+      //  //border: black 2px solid;
+      //
+      //}
+
+      > h3 {
+        padding: 20px 0 10px 24px;
+        text-shadow: 0 0 10px rgba(0, 0, 0, .2), 0 0 15px rgba(0, 0, 0, .3);
+        font-size: 24px;
+        z-index: 1;
+      }
+
+      &:hover {
+        width: 100%;
+        filter: none;
+      }
+    }
+    > [grid-area="kzn"] {
+      background: url("/images/kzn.jpg");
+      background-size: cover;
+      background-position-x: 30%;
+    }
+
+    > [grid-area="dubai"] {
+      background: url("/images/dubai.jpg");
+      background-size: cover;
+      background-position-x: 10%;
+    }
+
+    > [grid-area="msk"] {
+      background: url("/images/msk.jpg");
+      background-size: cover;
+    }
+
+    > [grid-area="london"] {
+      background: url("/images/london.jpg");
+      background-size: cover;
+    }
+  }
+}
+
+@media (min-width: 600px) {
+
+  .block {
+    padding: 40px 10% 0 10%;
+    margin: auto;
+  }
 }
