--- a/src/styles/Layout.module.scss
+++ b/src/styles/Layout.module.scss
@@ -9,6 +9,15 @@
     width: 100%;
     //padding-left: 60px;
     z-index: 999;
+    //animation: slide-in-down 1s ease-in-out;
+}
+@keyframes slide-in-down {
+    0% {
+        transform: translateY(-100%);
+    }
+    100% {
+        transform: translateY(0%);
+    }
 }
 
 .layout {
@@ -23,7 +32,7 @@
     //flex-direction: column;
     //justify-items: center;
     //align-content: center;
-    height: calc(100vh);
+    min-height: calc(100vh);
 }
 
 .scrollArea {
