--- a/src/styles/Navigation.module.scss
+++ b/src/styles/Navigation.module.scss
@@ -14,10 +14,14 @@
     //background: transparent;
 
     font-size: 12px;
-    font-weight: bold;
+    font-weight: 300;
     color: white;
     white-space: nowrap;
-    background: rgba(0, 0, 0, 0.5);
+    background: rgba(15, 48, 52, 0.52);
+
+    > .icon {
+        flex-shrink: 0;
+    }
 }
 
 .links {
@@ -37,9 +41,9 @@
     }
 
     > ul > li {
-        background: rgba(0, 0, 0, 0.6);
+        background: rgba(15, 48, 52, 0.52);
         //line-height: 32px;
-        padding: 20px 10px;
+        padding: 20px;
 
         &:first-child {
             margin-top: 30px;
@@ -58,9 +62,9 @@
 
 .phone {
     text-align: center;
-    width: 200px;
     vertical-align: middle;
     line-height: 40px;
+    white-space: nowrap;
 }
 
 @media (min-width: 400px) {
@@ -74,7 +78,6 @@
     }
     .phone {
         text-align: left;
-        width: 200px;
         vertical-align: middle;
         line-height: 40px;
     }
@@ -84,12 +87,9 @@
     }
 }
 
-.phoneIcon {
-}
-
 .links > li > ul {
     font-size: 12px;
-    font-weight: normal;
+    //font-weight: normal;
 }
 
 .links > li > ul > li {
